--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,6 @@
 # --------------------------------------- #
 # DO NOT PUSH CHANGES IN THIS FILE TO GIT 
 # --------------------------------------- #
+
+MONGO_URL=mongodb+srv://sidh:sidh123@cluster0.jup9hps.mongodb.net/
+SECRET_KEY=mynameissidhantchtaurwedi
